// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div
  className="sc-kAycRU fUIZqT"
>
  <div>
    <div
      className="sc-eDPFhE epkJEm"
    >
      <div>
        <div
          className="sc-gEvDqW sc-eqUzNf juyGmH cnAvcW"
        >
          mfa.email.explain
        </div>
        <form
          className="sc-dLNtp cYoyeH"
          noValidate={true}
          onSubmit={[Function]}
        >
          <button
            className="sc-cPiJYC hoKIxj"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.register.email
          </button>
        </form>
      </div>
      <div
        className="sc-dcJtft iEKxUi"
      >
        <span />
      </div>
      <div>
        <div
          className="sc-gEvDqW sc-eqUzNf juyGmH cnAvcW"
        >
          mfa.phoneNumber.explain
        </div>
        <form
          className="sc-dLNtp cYoyeH"
          noValidate={true}
          onSubmit={[Function]}
        >
          <div
            className="sc-dhKdPU jiBjdW"
          >
            <label
              className="sc-jXbVAB kkfgdT"
              htmlFor="phone_number"
            >
              phoneNumber
            </label>
            <input
              className="sc-kpDprT eaxOem"
              data-testid="phone_number"
              id="phone_number"
              name="phone_number"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="phoneNumber"
              required={true}
              title="phoneNumber"
              type="tel"
              value=""
            />
          </div>
          <button
            className="sc-cPiJYC hoKIxj"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.register.phoneNumber
          </button>
        </form>
      </div>
    </div>
    <div
      className="sc-eDPFhE epkJEm"
    />
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div
  className="sc-kAycRU fUIZqT"
>
  <div>
    <div
      className="sc-eDPFhE epkJEm"
    >
      <div
        className="sc-dcJtft iEKxUi"
      >
        <span />
      </div>
      <div>
        <form
          className="sc-dLNtp cYoyeH"
          noValidate={true}
          onSubmit={[Function]}
        >
          <div
            className="sc-dhKdPU jiBjdW"
          >
            <label
              className="sc-jXbVAB kkfgdT"
              htmlFor="phone_number"
            >
              phoneNumber
            </label>
            <input
              className="sc-kpDprT eaxOem"
              data-testid="phone_number"
              id="phone_number"
              name="phone_number"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="phoneNumber"
              required={true}
              title="phoneNumber"
              type="tel"
              value=""
            />
          </div>
          <button
            className="sc-cPiJYC hoKIxj"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.register.phoneNumber
          </button>
        </form>
      </div>
    </div>
    <div
      className="sc-eDPFhE epkJEm"
    >
      <div>
        <form
          className="sc-dLNtp cYoyeH"
          noValidate={true}
          onSubmit={[Function]}
        >
          <button
            className="sc-cPiJYC hoKIxj"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.remove.email
          </button>
        </form>
      </div>
      <div
        className="sc-dcJtft iEKxUi"
      >
        <span />
      </div>
      <div>
        <form
          className="sc-dLNtp cYoyeH"
          noValidate={true}
          onSubmit={[Function]}
        >
          <button
            className="sc-cPiJYC hoKIxj"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.remove.phoneNumber
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
